implement configurations
