# device/repository.go
@@ -6,6 +6,7 @@ import (
 	"github.com/google/uuid"
 	"gorm.io/datatypes"
 	"gorm.io/gorm"
+	"gorm.io/gorm/clause"
 )
 
 type (
@@ -13,7 +14,7 @@ type (
 		db *gorm.DB
 	}
 
-	deviceEntity struct {
+	DeviceEntity struct {
 		ID     string
 		Name   string
 		Type   string
@@ -21,7 +22,7 @@ type (
 	}
 )
 
-func (deviceEntity) TableName() string {
+func (DeviceEntity) TableName() string {
 	return "devices"
 }
 
@@ -31,8 +32,8 @@ func NewRepository(db *gorm.DB) Repository {
 	}
 }
 
-func (r *Repository) GetDevices() ([]deviceEntity, error) {
-	var devices []deviceEntity
+func (r *Repository) GetDevices() ([]DeviceEntity, error) {
+	var devices []DeviceEntity
 	if err := r.db.Find(&devices).Error; err != nil {
 		return nil, err
 	}
@@ -40,10 +41,23 @@ func (r *Repository) GetDevices() ([]deviceEntity, error) {
 	return devices, nil
 }
 
-func (r *Repository) GetDevice(id string) (deviceEntity, error) {
-	var device deviceEntity
+func (r *Repository) GetDevice(id string) (DeviceEntity, error) {
+	var device DeviceEntity
 	if err := r.db.First(&device, "id = ?", id).Error; err != nil {
-		return deviceEntity{}, err
+		return DeviceEntity{}, err
+	}
+
+	return device, nil
+}
+
+func (r *Repository) CreateDevice(device DeviceEntity) (DeviceEntity, error) {
+	if err := r.db.Create(device).Error; err != nil {
+		return DeviceEntity{}, err
+	}
+
+	device, err := r.GetDevice(device.ID)
+	if err != nil {
+		return DeviceEntity{}, err
 	}
 
 	return device, nil
@@ -70,11 +84,44 @@ func (r *Repository) ListConfigurations(id string) ([]configurationEntity, error
 	return configurations, nil
 }
 
-func (r *Repository) CreateConfiguration(deviceId string, name string, data json.RawMessage) error {
-	return r.db.Create(&configurationEntity{
+func (r *Repository) CreateConfiguration(deviceId string, name string, data json.RawMessage) (configurationEntity, error) {
+	config := &configurationEntity{
 		ID:       uuid.New().String(),
 		DeviceID: deviceId,
 		Name:     name,
 		Data:     datatypes.JSON(data),
-	}).Error
+	}
+
+	if err := r.db.Create(config).Error; err != nil {
+		return configurationEntity{}, err
+	}
+
+	configuration, err := r.GetConfiguration(config.ID)
+	if err != nil {
+		return configurationEntity{}, err
+	}
+
+	return configuration, nil
+}
+
+func (r *Repository) GetConfiguration(id string) (configurationEntity, error) {
+	var configuration configurationEntity
+	if err := r.db.First(&configuration, "id = ?", id).Error; err != nil {
+		return configurationEntity{}, err
+	}
+
+	return configuration, nil
+}
+
+// TODO: doesnt work :(
+func (r *Repository) UpdateConfiguration(config configurationEntity) (configurationEntity, error) {
+	onConflict := clause.OnConflict{
+		Columns: []clause.Column{{Name: "id"}},
+	}
+
+	if err := r.db.Clauses(onConflict).Create(&config).Error; err != nil {
+		return configurationEntity{}, err
+	}
+
+	return config, nil
 }
